@@ -27,10 +27,11 @@
       <activemq.version>5.5.0</activemq.version>
       <commons-exec.version>1.1</commons-exec.version>
       <commons-io.version>2.4</commons-io.version>
-      <jersey.version>1.14</jersey.version>
+      <jersey.version>1.9.1</jersey.version>
       <jetty.webhcat.version>7.6.0.v20120127</jetty.webhcat.version>
       <jms.version>1.1</jms.version>
       <slf4j.version>1.6.1</slf4j.version>
+      <wadl-resourcedoc-doclet.version>1.4</wadl-resourcedoc-doclet.version>
 
       <hadoop20.version>${cdh.mr1.version}</hadoop20.version>
       <hadoop23.version>${cdh.hadoop.version}</hadoop23.version>
